# BSU_QR_Code_Generator_CPP

QRCodeFinal/: settings.gradle
QRCodeFinal/app/: build.gradle
QRCodeFinal/app/src/androidTest/java/com/example/qrcodefinal/: ExampleInstrumentedTest.java
QRCodeFinal/app/src/main/: AndroidManifest.xml
QRCodeFinal/app/src/main/cpp/: BitStream.cpp  BitStream.h  CMakeLists.txt  Constants.h  Main.cpp  Mode.h  QRCode.h  QRCodeSegment.h  QRGenerator.h
QRCodeFinal/app/src/main/java/com/example/qrcodefinal/: MainActivity.java
QRCodeFinal/app/src/main/res/layout/: activity_main.xml
QRCodeFinal/app/src/main/res/values/: styles.xml
QRCodeFinal/app/src/test/java/com/example/qrcodefinal/: ExampleUnitTest.java
QRCodeFinal/gradle/wrapper/: gradle-wrapper.properties
